--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
         <h1>DataFormsJS</h1>
 
-        <a href="https://www.dataformsjs.com/#/en/">
+        <a href="https://www.dataformsjs.com/">
             <svg width="158px" height="158px" viewBox="0 0 158 158" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                 <defs>
                     <radialGradient cx="50%" cy="50%" fx="50%" fy="50%" r="77.178315%" id="radialGradient-1">
