💡 Update Example file for Vue 3

--- a/img/readme/example-code.htm
+++ b/img/readme/example-code.htm
@@ -33,9 +33,9 @@
             data-lazy-load="jsonData, flags"
             data-countries>
 
-            <h3 v-if="isLoading" v-cloak class="loading">Loading...</h3>
-            <h3 v-if="hasError" v-cloak class="error">{{ errorMessage }}</h3>
-            <div v-if="isLoaded" v-cloak>
+            <h3 v-if="isLoading" class="loading">Loading...</h3>
+            <h3 v-if="hasError" class="error">{{ errorMessage }}</h3>
+            <div v-if="isLoaded">
                 <h1>Countries</h1>
                 <ul>
                     <li v-for="country in countries">
@@ -46,7 +46,13 @@
             </div>
         </script>
 
+        <!-- Vue 2 -->
         <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+
+        <!-- Vue 3 (Currently in Beta) -->
+        <!-- <script src="https://unpkg.com/vue@next"></script> -->
+
+        <!-- DataFormsJS -->
         <script src="https://cdn.jsdelivr.net/npm/dataformsjs@latest/js/DataFormsJS.min.js"></script>
         <script>
             app.lazyLoad = {
